--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
     </ul>
     <div class='header-right btn'>
       <%= link_to "/", class:"login-btn" do %>
-      <span class='btn-a'>login</span><span class='btn-b'>ログイン</span>
+      <span class='btn-a'>LOGIN</span><span class='btn-b'>ログイン</span>
       <% end %>
       <%= link_to "/", class:"login-btn" do %>
       <span class='btn-a'>NEW</span><span class='btn-b'>新規登録</span>
