--- a/app/assets/stylesheets/top.css
+++ b/app/assets/stylesheets/top.css
@@ -42,7 +42,7 @@ header {
 }
 
 .header-right.list .text {
-  font-size: 10px;
+  font-size: 12px;
   color: white;
   text-decoration: none;
   margin-left: 20px;
@@ -62,7 +62,7 @@ header {
 
 .header-right.btn .login-btn {
   position: relative;
-  width: 100px;
+  width: 130px;
   height: 35px;
   margin-left: 20px;
 }
@@ -157,5 +157,309 @@ footer {
 
 .footer-right .text:hover {
   color: #d9e021;
+}
+
+.contents-01 {
+  height: 650px;
+  width: 100vw;
+  background-color: black;
+  overflow: hidden;
+  position: relative;
+}
+
+.scroll {
+  position: absolute;
+  width: 15px;
+  z-index: 20;
+  margin: 400px 0 0 30px;
+}
+
+.contents-01-text {
+  position: absolute;
+  z-index: 10;
+}
+
+.contents-01-text .main-text {
+  margin: 50px 0 0 80px;
+  font-size: 250px;
+  line-height: 200px;
+  letter-spacing: 5px;
+  color: white;
+  font-family: 'Staatliches', cursive;
+  text-shadow: 1px 2px 10px #333333;
+}
+
+.contents-01-text .sub-text {
+  margin: 10px 0 0 90px;
+  font-size: 50px;
+  line-height: 60px;
+  letter-spacing: 3px;
+  color: white;
+  font-family: 'Staatliches', cursive;
+  text-shadow: 1px 2px 10px #333333;
+}
+
+.contents-01-bg {
+  position: relative;
+  position: absolute;
+  height: 650px;
+  width: 800px;
+  overflow: hidden;
+  background-color: black;
+}
+
+.contents-01-bg .img-bg {
+  height: 680px;
+  width: 830px;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  left: -10px;
+  opacity: 60%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 20% 100%;
+     object-position: 20% 100%;
+  -webkit-filter: blur(10px);
+          filter: blur(10px);
+}
+
+.img-main {
+  width: 80vw;
+  height: 570px;
+  vertical-align: bottom;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 0% 0%;
+     object-position: 0% 0%;
+}
+
+.cover-slide {
+  position: relative;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 80vw;
+  height: 570px;
+}
+
+.cover-slide::after {
+  content: "";
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+}
+
+.cover-slide.inview::after {
+  opacity: 1;
+  -webkit-animation-name: kf-cover-slide;
+          animation-name: kf-cover-slide;
+  -webkit-animation-duration: 1.6s;
+          animation-duration: 1.6s;
+  -webkit-animation-timing-function: ease-in-out;
+          animation-timing-function: ease-in-out;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-direction: normal;
+          animation-direction: normal;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes kf-cover-slide {
+  0% {
+    left: 100%;
+    right: 0;
+  }
+  50% {
+    left: 0;
+    right: 0;
+  }
+  100% {
+    left: 0;
+    right: 100%;
+  }
+}
+
+@keyframes kf-cover-slide {
+  0% {
+    left: 100%;
+    right: 0;
+  }
+  50% {
+    left: 0;
+    right: 0;
+  }
+  100% {
+    left: 0;
+    right: 100%;
+  }
+}
+
+.img-main {
+  opacity: 0;
+}
+
+.inview .img-main {
+  -webkit-animation-name: kf-img-show;
+          animation-name: kf-img-show;
+  -webkit-animation-duration: 1.6s;
+          animation-duration: 1.6s;
+  -webkit-animation-timing-function: ease-in-out;
+          animation-timing-function: ease-in-out;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-direction: normal;
+          animation-direction: normal;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes kf-img-show {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  50.1% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes kf-img-show {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  50.1% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.contents-02 {
+  background-color: #0073d7;
+  overflow: hidden;
+  text-align: center;
+}
+
+.top-box {
+  width: 100vw;
+  height: 50px;
+  background-color: black;
+}
+
+.contents-02-text {
+  margin: 50px 80px 0 80px;
+}
+
+.contents-02-text .logo {
+  width: 20vw;
+}
+
+.contents-02-text .text-01 {
+  font-size: 12px;
+  color: white;
+  margin-bottom: 20px;
+}
+
+.contents-02-img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contents-02-img .img {
+  height: 200px;
+  width: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.explanation {
+  margin-top: 50px;
+  width: 100vw;
+}
+
+.bottm-box {
+  margin-top: -10px;
+  width: 100vw;
+  height: 50px;
+  background-color: #0073d7;
+}
+
+.contents-03 {
+  height: 500px;
+  margin: 0 80px;
+}
+
+.info-title {
+  font-size: 50px;
+  padding-bottom: 10px;
+  font-family: 'Staatliches', cursive;
+  border-bottom: 2px solid black;
+  margin: 80px 0 0 0;
+}
+
+.info {
+  height: 100px;
+  border-bottom: 1px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.info .day {
+  font-size: 14px;
+  font-weight: bold;
+  margin: 0 20px;
+}
+
+.info .item {
+  background-color: #0073d7;
+  font-size: 12px;
+  letter-spacing: 2px;
+  line-height: 20px;
+  color: white;
+  text-align: center;
+  width: 80px;
+  height: 20px;
+  margin-right: 20px;
+}
+
+.info .text {
+  font-size: 18px;
+  font-weight: bold;
+  text-decoration: none;
+  color: black;
+}
+
+.info .text:hover {
+  color: #0073d7;
 }
 /*# sourceMappingURL=top.css.map */
