ログイン・新規登録画面を作成

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
 
   <div class="header-left">
-    <%= image_tag "logo.svg" , class:"header-left logo" %>
+    <%= link_to image_tag("logo.svg" , class:"header-left logo"), "/" %>
   </div>
 
   <div class='header-right'>
