--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,6 +9,18 @@
       <li><%= link_to "イベントを作成する","/", class:"text" %></li>
       <li><%= link_to "イベントを探す","/", class:"text" %></li>
     </ul>
+  
+  <% if user_signed_in? %>
+    <div class='header-right btn'>
+      <%= link_to "#", class:"login-btn" do %>
+      <span class='btn-a'><%=current_user.nickname%></span><span class='btn-b'>マイページ</span>
+      <% end %>
+      <%= link_to destroy_user_session_path,method: :delete, class:"login-btn" do %>
+      <span class='btn-a'>LOGOUT</span><span class='btn-c'>ログアウト</span>
+      <% end %>
+    </div>
+
+  <% else %>
     <div class='header-right btn'>
       <%= link_to new_user_session_url, class:"login-btn" do %>
       <span class='btn-a'>LOGIN</span><span class='btn-b'>ログイン</span>
@@ -17,8 +29,8 @@
       <span class='btn-a'>NEW</span><span class='btn-b'>新規登録</span>
       <% end %>
     </div>
+  <% end %>
+
   </div>
 
 </header>
-
-<div class="">
