エラーメッセージ修正

--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -2,13 +2,8 @@
 /* エラーメッセージ */
 .error-alert {
   white-space: pre-line;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   line-height: 70%;
+  margin-left: 80px;
 }
 
 .error-message {
