--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,3 +1,38 @@
-// Place all the styles related to the events controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+// イベント作成完画面
+
+.event-create{
+  height: 80vh;
+}
+
+.event-box{
+  height: 300px;
+  margin: 0 80px 100px 80px;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  & .text{
+    font-size: 16px;
+    color: black;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin-top: -10px;
+  }
+  & .btn{
+    margin-top: 10px;
+    height: 30px;
+    width: 300px;
+    background-color: black;
+    text-decoration: none;
+    text-align: center;
+    line-height: 18px;
+    &.text{
+      color: white;
+      font-size: 14px;
+      font-weight: bold;
+      letter-spacing: 2px;
+    }
+  }
+}
