--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -45,4 +45,145 @@
   font-weight: bold;
   letter-spacing: 2px;
 }
+
+.event-list-box {
+  background-color: #f2f2f2;
+  padding: 80px 0;
+}
+
+.event-list {
+  background-color: white;
+  height: 100px;
+  width: 800px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  list-style: none;
+  padding: 0;
+}
+
+.event-list .status {
+  background-color: #0073d7;
+  height: 100px;
+  width: 100px;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  color: white;
+  text-align: center;
+  line-height: 100px;
+  margin-right: 20px;
+}
+
+.event-list .date {
+  width: 130px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.event-list .level-title {
+  width: 450px;
+}
+
+.event-list .level-title .title {
+  font-size: 18px;
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
+}
+
+.event-list .level-title .title:hover {
+  color: #0073d7;
+}
+
+.event-list .level-title .levelev {
+  font-size: 10px;
+  height: 18px;
+  font-weight: bold;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 3px;
+  border-radius: 10px;
+}
+
+.event-list .level-title .levelev.level-02 {
+  width: 40px;
+  background-color: #ff7bac;
+}
+
+.event-list .level-title .levelev.level-03 {
+  width: 50px;
+  background-color: #f7931e;
+}
+
+.event-list .level-title .levelev.level-04 {
+  width: 40px;
+  background-color: #f15a24;
+}
+
+.event-list .level-title .levelev.level-05 {
+  width: 50px;
+  background-color: #8cc63f;
+}
+
+.event-list .level-title .levelev.level-06 {
+  width: 40px;
+  background-color: #0071bc;
+}
+
+.event-list .level-title .levelev.level-07 {
+  width: 65px;
+  background-color: #B3B3B3;
+}
+
+.event-list .organizer {
+  width: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.event-list .organizer .user-name {
+  font-size: 8px;
+  color: #333333;
+  text-decoration: none;
+}
+
+.event-list .organizer .user-img {
+  border-radius: 50%;
+  background-color: #B3B3B3;
+  width: 50px;
+  height: 50px;
+}
+
+.mon {
+  color: red;
+}
+
+.sat {
+  color: royalblue;
+}
 /*# sourceMappingURL=events.css.map */
