--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,4 +1,7 @@
 
+$bb: #0073d7;
+$by: #d9e021;
+
 // イベント作成完画面
 
 .event-create{
@@ -36,3 +39,117 @@
     }
   }
 }
+
+
+// イベント一覧表示
+
+.event-list-box{
+  background-color: #f2f2f2;
+  padding: 80px 0;
+}
+
+.event-list{
+  background-color: white;
+  height: 100px;
+  width: 800px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  & .status{
+    background-color: $bb;
+    height: 100px;
+    width: 100px;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    color: white;
+    text-align: center;
+    line-height: 100px;
+    margin-right: 20px;
+  }
+  & .date{
+    width: 130px;
+    font-size: 14px;
+    font-weight: bold;
+  }
+  & .level-title{
+    width: 450px;
+    & .title{
+      font-size: 18px;
+      font-weight: bold;
+      color: black;
+      text-decoration: none;
+      &:hover{
+        color: $bb;
+      }
+    }
+    & .levelev{
+      font-size: 10px;
+      height: 18px;
+      font-weight: bold;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 3px;
+      border-radius: 10px;
+      &.level-02{
+        width: 40px;
+        background-color: #ff7bac;
+      }
+      &.level-03{
+        width: 50px;
+        background-color: #f7931e;
+      }
+      &.level-04{
+        width: 40px;
+        background-color: #f15a24;
+      }
+      &.level-05{
+        width: 50px;
+        background-color: #8cc63f;
+      }
+      &.level-06{
+        width: 40px;
+        background-color: #0071bc;
+      }
+      &.level-07{
+        width: 65px;
+        background-color: #B3B3B3;
+      }
+    }
+  }
+  & .organizer{
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    & .user-name{
+      font-size: 8px;
+      color: #333333;
+      text-decoration: none;
+    }
+    & .user-img{
+      border-radius: 50%;
+      background-color: #B3B3B3;
+      width: 50px;
+      height: 50px;
+    }
+  }
+}
+
+.mon{
+  color: red;
+}
+
+.sat{
+  color: royalblue;
+}
+
+
+
+
