--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -102,11 +102,13 @@
         <%= f.submit "イベントに参加する ＞", class:"submit joining" %> 
       </div>
     <% end %>
+  <% else %>
+    <div class='space'></div>
   <% end %>
 
   <div class="participant-bg">
 
-    <div class='participant-title'>
+    <div class='event-title-mini'>
       <h1 class='title'>CURRENT PARTCIPANTS</h1>
       <p class='text'>現在の参加者</p>
     </div>
