--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -67,9 +67,9 @@ $by: #d9e021;
       width: 200px;
     }
     &.long{
-      margin-top: -100px;
-      width: 600px;
-      height: 230px;
+      margin-top: -280px;
+      width: 400px;
+      height: 600px;
     }
     &.image{
       width: 150px;
@@ -101,7 +101,7 @@ $by: #d9e021;
 }
 
 .field.long{
-  height: 300px;
+  height: 700px;
 }
 
 .field-time{
@@ -165,5 +165,60 @@ $by: #d9e021;
     opacity: 80%;
   }
   }
+}
+
+// マイページ
+
+.user-top-bg{
+  background-color: $bb;
+  height: 200px;
+}
+
+.user-show-user{
+  margin-top: -150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  & .user-name{
+    font-size: 40px;
+    font-weight: bold;
+    color: #333333;
+    text-decoration: none;
+  }
+  & .user-img{
+    border-radius: 50%;
+    background-color: #B3B3B3;
+    width: 250px;
+    height: 250px;
+    border: 10px solid white;
+  }
+}
+
+.user-show-items{
+  display: flex;
+  list-style: none;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  & .user-item{
+    margin-right: 20px;
+  }
+}
+
+.user-profile{
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 50px;
+  white-space: pre-wrap;
+  text-align: center;
+  line-height: 28px;
+}
+
+.user-bottom-bg{
+  background-color: #f2f2f2;
+  padding: 20px 0 80px 0;
 }
 
