トップ画面フェードイン

--- a/app/assets/stylesheets/top.css
+++ b/app/assets/stylesheets/top.css
@@ -168,6 +168,41 @@ footer {
   color: #d9e021;
 }
 
+.top {
+  -webkit-animation-name: kf-fadeIn;
+          animation-name: kf-fadeIn;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-direction: normal;
+          animation-direction: normal;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes kf-fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes kf-fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .contents-01 {
   height: 650px;
   width: 100vw;
