--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,3 +1,5 @@
+<div class="top">
+
 <%# コンテンツ01 %>
 
 <div class="contents-01">
@@ -63,5 +65,7 @@
 
 <div class="contents-04">
 
+
+</div>
 
 </div>
